[cms]: updated the widthScrollbar component to fix a bug where clicking on the right side would update the button pos, and made the code more shared.

--- a/cms/src/scss/components/EditPage.scss
+++ b/cms/src/scss/components/EditPage.scss
@@ -20,7 +20,6 @@
     }
     .pagePreviewCon {
         width: calc(100% - rem(600));
-        padding: rem(10);
         height: 100%;
         .iframeContainer {
             width: 100%;
@@ -30,6 +29,7 @@
             height: calc(100% - rem(25));
             iframe {
                 width: 100%;
+                height: 100%;
             }
         }
     }
